# rogalik

./: .pre-commit-config.yaml  GAME.md  alembic.ini  docker-compose.yml  main.py  models.drawio  models.drawio.xml  pyproject.toml
.github/workflows/: test_on_push.yaml
alembic/: env.py
alembic/versions/: 1db3f7dc7f1f_player_models_migration.py  61a2ad65d74b_player_email_and_password.py  7b8e6bd8abe4_initial_migration.py  828b54c2cf9c_new_models.py  c65d3c12b93a_initial_migration.py
client/: game.py
pygame_client/: game.py
rogalik/: settings.py
rogalik/models/: db.py  dto.py
rogalik/server/: __init__.py  models.py  routers.py  socket_manager.py
src/: .env.example  main.py  pytest.ini
src/config/: app.py  log_tools.py  settings.py
src/config/routers/: http.py  socket.py
src/logic/services/: socket_connect.py
src/logic/utils/: auth_utils.py  character_utils.py  common_utils.py  json_utils.py
src/managers/: socket.py
src/managers/actions/: action_routes.py
src/managers/repository/: async_redis_manager.py  base_manager.py  local_redis_manager.py  main_manager.py
src/models/: base.py  exceptions.py  jwt.py  mixins.py
src/models/client/player/: base.py
src/models/constants/: character.py  race.py  skill.py  socket.py
src/models/db/: base.py  dependencies.py  mixins.py
src/models/repository/: extra_effects.py
src/models/repository/player/: base.py  class_.py  race.py  skill.py
tests/: conftest.py  test_server.py
